# optirust

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  optirust.toml  optirust_report.json
.github/workflows/: demo.yml
demo/: index.html  iniciar_demo.txt
examples/: prototipo_ui.rs  relatorio_estruturado.json
src/: config.rs  main.rs  optimizer.rs  report.rs  scanner.rs
